--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body style="margin: 0; padding: 0;">
     <div class="pag-web">
-        <nav class="menu-lateral">
+        <nav class="contactos">
             <div class="maria">
                 <div class="descripcion">
                     <img style="width: 35px; height: 35px;" src="assets/img/0maria.jpg" alt="maria">
@@ -101,7 +101,7 @@
                 </div>
             </div>   
         </nav>
-        <section class="sala-espera">
+        <section class="seccion-principal">
             <div class="iconos-der">
                 <img src="assets/img/hand.png" alt="manos">
                 <h1>Comienza el Nertworking</h1>
